<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/facebookPage"
            android:icon="@drawable/facebook"
            android:title="@string/facebook_page"/>
    </group>
    <item android:title="@string/communication">
        <menu>
            <item
                android:title="@string/nav_rate"
                android:icon="@drawable/rate"
                android:id="@+id/nav_rate"/>

            <item
                android:title="@string/nav_share"
                android:icon="@drawable/share"
                android:id="@+id/nav_share"/>

            <item
                android:id="@+id/more"
                android:icon="@drawable/more"
                android:title="@string/more"/>

        </menu>
    </item>
    
</menu>